xdmcp-display: don't set MANAGED until we've connected

We don't want to start the greeter session until we've
successfully connected to the display ourselves!

This prevents a race where session processes may inadvertently
 get the initial connection to the display server, causing
premature resets.

https://bugzilla.gnome.org/show_bug.cgi?id=780787